Fix the giant spacing between elements on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,10 @@ select {
 
 /* Small screens */
 @media screen and (max-width: 700px) {
+
+  .flex-container {
+    align-content: flex-start;
+  }
   
   #header-title, #restaurant-name {
     font-size: 16px;
